# turing-machine-emulator

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
.github/ISSUE_TEMPLATE/: ----.md  --bug.md  report_bug.md
demo/4-bit-adder/: description.txt  e1.txt  e2.txt  instructions.txt
demo/x-plus-1/: e1.txt  e2.txt  instructions.txt
